# sahl

./: .clang-format  .gitignore  CONTRIBUTING.md  Cargo.toml  DOCS.md  LICENSE  Makefile  README.md  bench.sh  math.c  rt.c  rt.h  rt2.c  run_aot.sh  run_byte.sh  run_go.sh  sahl.c  sahl_aot.go  sahl_rts.c  sahlc  sample.sahl  sample2.sahl  sample3.py  test.py
.github/workflows/: tests.yml
ext/: package.json  vsc-extension-quickstart.md
ext/syntaxes/: grammar.tmLanguage.json
frontend.hs/: frontend.cabal
frontend.hs/app/: Lexer.hs  Main.hs  Parser.hs  Syntax.hs
frontend/.cargo/: config.toml
frontend/src/: bytes.rs  cfg.rs  go.rs  main.rs  native.rs  parser.rs  regcode.rs  semant.rs  syntax.rs  utils.rs
include/: opcodes.h
runtime/: Cargo.toml  rt.h
runtime/src/: lib.rs  obj.rs  print.rs
samples/: addition.py  addition.sahl  adt.sahl  append.py  append.sahl  bitwise.sahl  cast.sahl  chan.go  chan.sahl  cmpop.sahl  control.sahl  coroutine.sahl  destructure.sahl  factorial.py  factorial.sahl  fibonacci.py  fibonacci.sahl  forin.sahl  gc.sahl  graph.sahl  lists_over_chans.sahl  mandelbrot.sahl  map.sahl  match.sahl  mutate.sahl  neuralnet.sahl  ref.sahl  rule110.sahl  sample.sahl  sample2.sahl  sample3.sahl  sample4.sahl  samplep1.sahl  scope.sahl  seive.sahl  simple.sahl  sort.py  sort.sahl  store.js  store.sahl  (+6 more)
src/: asm.rs  bytecode.rs  bytes.rs  cfg.rs  code.rs  go.rs  main.rs  native.rs  parser.rs  regcode.rs  semant.rs  syntax.rs  utils.rs  vm.rs
superinstgen/: CHANGELOG.md  LICENSE  superinstgen.cabal
superinstgen/app/: Main.hs
test/: map
tests/: adt  bitwise  control  factorial  graph  match  mutate  rule110  sample  sample4  seive  sort  store  string_indexing  tree  tuple
vm/: code.c  code.h  common.h  conc.c  conc.h  coro.c  debug.c  debug.h  func.c  func.h  gc.c  gc.h  list.c  list.h  main.c  map.c  obj.c  obj.h  opcodes.h  rbtree.c  rbtree.h  read.c  read.h  scheduler.h  tcp.c  tcp.h  vm.c  vm.h
vm2/: code.cpp  code.h  consts.cpp  consts.h  main.cpp
