cabal-version:      3.0
name:               superinstgen
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Malik Ammar Faisal
maintainer:         binfaisal.ammar@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable superinstgen
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
          base ^>=4.19.1.0
        , text
    hs-source-dirs:   app
    default-language: Haskell2010
